Added edits to vqe demo

--- a/notebooks/tutorial_vqe.ipynb
+++ b/notebooks/tutorial_vqe.ipynb
@@ -139,7 +139,7 @@
         "$\\vert \\Psi(\\theta) \\rangle$ is schematically illustrated in the figure\n",
         "below.\n",
         "\n",
-        "![sketch_circuit](/_static/demonstration_assets/variational_quantum_eigensolver/sketch_circuit.png)\n",
+        "![sketch_circuit](../_static/demonstration_assets/variational_quantum_eigensolver/sketch_circuit.png)\n",
         "\n",
         "In this figure, the gate $G^{(2)}$ corresponds to the\n",
         "[`DoubleExcitation`](https://docs.pennylane.ai/en/stable/code/api/pennylane.DoubleExcitation.html#pennylane.DoubleExcitation)\n",
